@@ -5,7 +5,7 @@
 #
 # Fink - a package manager that downloads source and installs it
 # Copyright (c) 2001 Christoph Pfisterer
-# Copyright (c) 2001-2009 The Fink Team
+# Copyright (c) 2001-2010 The Fink Team
 #
 # This program is free software; you can redistribute it and/or
 # modify it under the terms of the GNU General Public License
