@@ -1,3 +1,7 @@
+2010-01-03  Daniel Macks  <dmacks@netspace.org>
+
+	* inject.pl, install.sh, setup.sh: update copyright
+
 2009-12-28  Daniel Macks  <dmacks@netspace.org>
 
 	* preinst.in, postinst.in, prerm.in, postrm.in: sanity-check deb
